Finalize backend node & frontend react in development mode

--- a/server/views/dashboard.pug
+++ b/server/views/dashboard.pug
@@ -2,8 +2,10 @@ extends layout
 
 block content
     div DASHBOARD PAGE AT ROUTE GET "/dashboard"
-    div --\
+    div --
     a(href="/") Home
-    div --\
+    div --
     a(href="/superhero") Superheroes // View Templates From MongoDB
-    a(href="/api/superhero") Superheroes // API To React From MongoDB
+    a(href="/react") Superheroes // API To React From MongoDB
+    // Add link to: Messages - View Templates From MySQL
+    // Add link to: Messages - API To React From MySQL
