--- a/server/views/layout.pug
+++ b/server/views/layout.pug
@@ -5,5 +5,5 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     div STACK SANDBOX - VIEW TEMPLATE
-    div --\
+    div --
     block content
