--- a/server/views/superhero.pug
+++ b/server/views/superhero.pug
@@ -2,12 +2,12 @@ extends layout
 
 block content
   div SUPERHEROES PAGE AT ROUTE GET "/superhero"
-  div --\
+  div --
   a(href="/") Home
   a(href="/dashboard") Dashboard
-  div --\
+  div --
   a(href="/superhero/create") Create Super Hero
-  div --\
+  div --
   each superhero in superheroes
     a(href=superhero.url) #{superhero.name}
   else
