--- a/server/views/superhero-detail.pug
+++ b/server/views/superhero-detail.pug
@@ -2,11 +2,16 @@ extends layout
 
 block content
   div SUPERHERO DETAIL PAGE AT ROUTE GET "/superhero/:id"
-  div --\
+  div --
   a(href="/") Home
   a(href="/dashboard") Dashboard
   a(href="/superhero") Superheroes List
-  div --\
+  div --
   div #{superhero.name}
+  div --
+  div.description #{superhero.description}
+  div --
   a(href=`/superhero/${superhero.id}/edit`) Edit
   a(href=`/superhero/${superhero.id}/delete`) Delete
+  div --
+  a(href="/superhero") Back
